--- a/fsc-assets/fast-social-count.css
+++ b/fsc-assets/fast-social-count.css
@@ -38,9 +38,9 @@
 /* FONT PATH
  * -------------------------- */
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('fonts/fontello.eot?v=4.2.0');
-  src: url('fonts/fontello.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('fonts/fontello.woff?v=4.2.0') format('woff'), url('fonts/fontello.ttf?v=4.2.0') format('truetype'), url('fonts/fontello.svg?v=4.2.0#fontawesomeregular') format('svg');
+  font-family: 'fsc_icons';
+  src: url('fonts/fsc_icons.eot?v=4.2.0');
+  src: url('fonts/fsc_icons.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('fonts/fsc_icons.woff?v=4.2.0') format('woff'), url('fonts/fsc_icons.ttf?v=4.2.0') format('truetype'), url('fonts/fsc_icons.svg?v=4.2.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -72,7 +72,7 @@
 /*fontello-ie7*/
 [class^="fa-"],
 [class*=" fa-"] {
-  font-family: 'fontello';
+  font-family: 'fsc_icons';
   font-style: normal;
   font-weight: normal;
   /* fix buttons height */
@@ -101,7 +101,7 @@
 /* END IE7 */
 .fa {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
+  font: normal normal normal 14px/1 "fsc_icons";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
